export class Airport {
  iata: string;
  icao: string;
  airportName: string; 
  city: string; 
  country: string; 
  timezone: number 
}