export class Airline {
  code: string;
  name: string;
};
