export class Ticket {
  id: number;
  // flight: Flight;
  // passanger: Passanger;
  dateOfPurchase: Date;
  flightClass: String;
  seatNumber: number;
  maxLuggageWeight: number;
  price: number;
}