@startuml Main Model Diagaram (simplified)

class Airline {
  __ attributes __
  -calculator: Calculator
  -name: String
  -code: String
}

class Airport {
  __ attributes __
  -code: String
  -city: String
  -country: String
  -description: String
}

class Flight {
  __ attributes __
  -flightNumber: int
  -airline: Airline
  -airport: Airport
  -capacity: int
  -departureDate: Date
  -departureTime: Date
  -arrivalDate: Date
  -arrivalTime: Date
}

class Ticket {
  __ attributes __
  -id: int
  -flight: Flight
  -passanger: Passanger
  -dateOfPurchase: Date
  -flightClass: String
  -seatNumber: int
  -maxLuggageWeight: int
  -price: double
}

class TripComposite << (C,#FF7700) Composite >> {
  -to: OneWayTrip
  -from: OneWayTrip
  -totalPrice: double
}

class OneWayTrip {
  __ attributes __
  -id: int
  -directFlight: boolean
  -tickets: Array<Ticket>
  -source: Airport
  -destination: Airport
  -departureDate: Date
  -arrivalDate: Date
}

class Passanger {
  __ attributes __
  -firstname: String
  -surname: String
  -dateOfBirth: Date
  -phoneNumber: String
  -email: String
  -idOrPesel: String
}

TripComposite *-- OneWayTrip: has 1 or 2 >
note "Depends if is one way\nor two way trip" as TripNote
TripComposite .. TripNote
TripNote .. OneWayTrip
OneWayTrip "1..*" *-- Ticket
OneWayTrip o-- Airport
Ticket o-- Flight
Ticket *-- Passanger
Flight o-- Airport
Flight o-- Airline


@enduml